Next release
============

  * Changes to JSON encoding and decoding:
    * New function bson_as_extended_json formats "Strict Extended JSON"
      according to MongoDB Extended JSON Spec, while bson_as_json is updated
      to conform to "Relaxed Extended JSON"
    * When parsing JSON type wrappers like "$timestamp", any missing or extra
      keys are an error. "$regex" now requires "$options".
    * BSON dates can be parsed from "$date" as an ISO8601 date or "$numberLong"
      as milliseconds since the epoch: "t": {"$date": {"$numberLong": "1234"}}.
      Dates can no longer be formmatted as raw integers. bson_as_json writes a
      BSON date after 1970 as "$date" with an ISO8601 string, and dates before
      1970 as negative milliseconds wrapped in "$numberLong".
      bson_as_extended_json always writes dates with "$numberLong".
  * Minimum required CMake version has been increased to 3.1.
  * CMake remains experimental on non-Windows platforms and issues a warning now
  * New functions
    * bson_strcasecmp, a portable equivalent of strcasecmp.
    * bson_iter_as_double, cast the current value to double.
    * bson_iter_init_from_data, creates an iterator from BSON string.
    * bson_validate_with_error, checks a document like bson_validate does but
      also reports which key was invalid
  * New convenience macros
    * BSON_ITER_HOLDS_INT, checks if iterator holds int32 or int64
    * BSON_ITER_HOLDS_NUMBER, checks if iterator holds int32, int64 or double
  * The non-numbers NaN, Infinity, and -Infinity are now recognized (regardless
    of case) when parsing JSON.
  * Raised BSON recursion limit to 200

Libbson-1.6.0
=============

It is my pleasure to announce libbson-1.6.0.

New features and bug fixes:

  * Use jsonsl instead of libyajl as our JSON parsing library, parse JSON more
    strictly, fix minor parsing bugs.
  * Extended JSON documents like '{"$code": "...", "$scope": {}}' are now parsed
    into BSON "code" elements.