@@ -53,6 +53,9 @@ typedef enum {
    BSON_JSON_IN_BSON_TYPE_TIMESTAMP_STARTMAP,
    BSON_JSON_IN_BSON_TYPE_TIMESTAMP_VALUES,
    BSON_JSON_IN_BSON_TYPE_TIMESTAMP_ENDMAP,
+   BSON_JSON_IN_BSON_TYPE_REGEX_STARTMAP,
+   BSON_JSON_IN_BSON_TYPE_REGEX_VALUES,
+   BSON_JSON_IN_BSON_TYPE_REGEX_ENDMAP,
    BSON_JSON_IN_BSON_TYPE_SCOPE_STARTMAP,
    BSON_JSON_IN_BSON_TYPE_DBPOINTER_STARTMAP,
    BSON_JSON_IN_SCOPE,
@@ -61,8 +64,8 @@ typedef enum {
 
 
 typedef enum {
-   BSON_JSON_LF_REGEX,
-   BSON_JSON_LF_OPTIONS,
+   BSON_JSON_LF_REGEX_PATTERN,
+   BSON_JSON_LF_REGEX_OPTIONS,
    BSON_JSON_LF_CODE,
    BSON_JSON_LF_SCOPE,
    BSON_JSON_LF_OID,
@@ -110,7 +113,7 @@ typedef struct {
 
 typedef union {
    struct {
-      bool has_regex;
+      bool has_pattern;
       bool has_options;
    } regex;
    struct {
@@ -573,8 +576,8 @@ _bson_json_read_integer (bson_json_reader_t *reader, uint64_t val, int64_t sign)
 
          bson->bson_type_data.maxkey.has_maxkey = true;
          break;
-      case BSON_JSON_LF_REGEX:
-      case BSON_JSON_LF_OPTIONS:
+      case BSON_JSON_LF_REGEX_PATTERN:
+      case BSON_JSON_LF_REGEX_OPTIONS:
       case BSON_JSON_LF_CODE:
       case BSON_JSON_LF_SCOPE:
       case BSON_JSON_LF_OID:
@@ -727,17 +730,18 @@ _bson_json_read_string (bson_json_reader_t *reader, /* IN */
          reader, "Invalid read of %s in state %d", val, rs);
    } else if (rs == BSON_JSON_IN_BSON_TYPE ||
               rs == BSON_JSON_IN_BSON_TYPE_TIMESTAMP_VALUES ||
+              rs == BSON_JSON_IN_BSON_TYPE_REGEX_VALUES ||
               rs == BSON_JSON_IN_BSON_TYPE_DATE_NUMBERLONG) {
       const char *val_w_null;
       _bson_json_buf_set (&bson->bson_type_buf[2], val, vlen);
       val_w_null = (const char *) bson->bson_type_buf[2].buf;
 
       switch (bs) {
-      case BSON_JSON_LF_REGEX:
-         bson->bson_type_data.regex.has_regex = true;
+      case BSON_JSON_LF_REGEX_PATTERN:
+         bson->bson_type_data.regex.has_pattern = true;
          _bson_json_buf_set (&bson->bson_type_buf[0], val, vlen);
          break;
-      case BSON_JSON_LF_OPTIONS:
+      case BSON_JSON_LF_REGEX_OPTIONS:
          bson->bson_type_data.regex.has_options = true;
          _bson_json_buf_set (&bson->bson_type_buf[1], val, vlen);
          break;
@@ -889,6 +893,8 @@ _bson_json_read_start_map (bson_json_reader_t *reader) /* IN */
       bson->read_state = BSON_JSON_IN_SCOPE;
    } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_DBPOINTER_STARTMAP) {
       bson->read_state = BSON_JSON_IN_DBPOINTER;
+   } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_REGEX_STARTMAP) {
+      bson->read_state = BSON_JSON_IN_BSON_TYPE_REGEX_VALUES;
    } else {
       bson->read_state = BSON_JSON_IN_START_MAP;
    }
@@ -906,15 +912,16 @@ _is_known_key (const char *key, size_t len)
 
 #define IS_KEY(k) (len == strlen (k) && (0 == memcmp (k, key, len)))
 
-   ret = (IS_KEY ("$regex") || IS_KEY ("$options") || IS_KEY ("$code") ||
-          IS_KEY ("$scope") || IS_KEY ("$oid") || IS_KEY ("$binary") ||
-          IS_KEY ("$type") || IS_KEY ("$date") || IS_KEY ("$undefined") ||
-          IS_KEY ("$maxKey") || IS_KEY ("$minKey") || IS_KEY ("$timestamp") ||
-          IS_KEY ("$numberInt") || IS_KEY ("$numberLong") ||
-          IS_KEY ("$numberDouble") || IS_KEY ("$numberDecimal") ||
-          IS_KEY ("$numberInt") || IS_KEY ("$numberLong") ||
-          IS_KEY ("$numberDouble") || IS_KEY ("$numberDecimal") ||
-          IS_KEY ("$dbPointer") || IS_KEY ("$symbol"));
+   ret = (IS_KEY ("$regularExpression") || IS_KEY ("$options") ||
+          IS_KEY ("$code") || IS_KEY ("$scope") || IS_KEY ("$oid") ||
+          IS_KEY ("$binary") || IS_KEY ("$type") || IS_KEY ("$date") ||
+          IS_KEY ("$undefined") || IS_KEY ("$maxKey") || IS_KEY ("$minKey") ||
+          IS_KEY ("$timestamp") || IS_KEY ("$numberInt") ||
+          IS_KEY ("$numberLong") || IS_KEY ("$numberDouble") ||
+          IS_KEY ("$numberDecimal") || IS_KEY ("$numberInt") ||
+          IS_KEY ("$numberLong") || IS_KEY ("$numberDouble") ||
+          IS_KEY ("$numberDecimal") || IS_KEY ("$dbPointer") ||
+          IS_KEY ("$symbol"));
 
 #undef IS_KEY
 
@@ -1009,10 +1016,6 @@ _bson_json_read_map_key (bson_json_reader_t *reader, /* IN */
 
    if (bson->read_state == BSON_JSON_IN_BSON_TYPE) {
       if
-         HANDLE_OPTION ("$regex", BSON_TYPE_REGEX, BSON_JSON_LF_REGEX)
-      else if
-         HANDLE_OPTION ("$options", BSON_TYPE_REGEX, BSON_JSON_LF_OPTIONS)
-      else if
          HANDLE_OPTION ("$oid", BSON_TYPE_OID, BSON_JSON_LF_OID)
       else if
          HANDLE_OPTION ("$binary", BSON_TYPE_BINARY, BSON_JSON_LF_BINARY)
@@ -1041,6 +1044,9 @@ _bson_json_read_map_key (bson_json_reader_t *reader, /* IN */
       else if (!strcmp ("$timestamp", (const char *) val)) {
          bson->bson_type = BSON_TYPE_TIMESTAMP;
          bson->read_state = BSON_JSON_IN_BSON_TYPE_TIMESTAMP_STARTMAP;
+      } else if (!strcmp ("$regularExpression", (const char *) val)) {
+         bson->bson_type = BSON_TYPE_REGEX;
+         bson->read_state = BSON_JSON_IN_BSON_TYPE_REGEX_STARTMAP;
       } else if (!strcmp ("$dbPointer", (const char *) val)) {
          /* start parsing "key": {"$dbPointer": {...}}, save "key" for later */
          _bson_json_buf_set (
@@ -1076,6 +1082,18 @@ _bson_json_read_map_key (bson_json_reader_t *reader, /* IN */
          HANDLE_OPTION ("t", BSON_TYPE_TIMESTAMP, BSON_JSON_LF_TIMESTAMP_T)
       else if
          HANDLE_OPTION ("i", BSON_TYPE_TIMESTAMP, BSON_JSON_LF_TIMESTAMP_I)
+      else {
+         _bson_json_read_set_error (
+            reader,
+            "Invalid key %s.  Looking for values for %d",
+            val,
+            bson->bson_type);
+      }
+   } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_REGEX_VALUES) {
+      if
+         HANDLE_OPTION ("pattern", BSON_TYPE_REGEX, BSON_JSON_LF_REGEX_PATTERN)
+      else if
+         HANDLE_OPTION ("options", BSON_TYPE_REGEX, BSON_JSON_LF_REGEX_OPTIONS)
       else {
          _bson_json_read_set_error (
             reader,
@@ -1130,13 +1148,15 @@ static void
 _bson_json_read_append_regex (bson_json_reader_t *reader,    /* IN */
                               bson_json_reader_bson_t *bson) /* IN */
 {
-   if (!bson->bson_type_data.regex.has_regex) {
-      _bson_json_read_set_error (reader, "Missing $regex after $options");
+   if (!bson->bson_type_data.regex.has_pattern) {
+      _bson_json_read_set_error (
+         reader, "Missing \"pattern\" after \"options\" in regular expression");
       return;
    }
 
    if (!bson->bson_type_data.regex.has_options) {
-      _bson_json_read_set_error (reader, "Missing $options after $regex");
+      _bson_json_read_set_error (
+         reader, "Missing \"options\" after \"pattern\" in regular expression");
       return;
    }
 
@@ -1342,9 +1362,6 @@ _bson_json_read_end_map (bson_json_reader_t *reader) /* IN */
 
       bson->read_state = BSON_JSON_REGULAR;
       switch (bson->bson_type) {
-      case BSON_TYPE_REGEX:
-         _bson_json_read_append_regex (reader, bson);
-         break;
       case BSON_TYPE_CODE:
       case BSON_TYPE_CODEWSCOPE:
          /* we've read the closing "}" in "{$code: ..., $scope: ...}" */
@@ -1410,6 +1427,7 @@ _bson_json_read_end_map (bson_json_reader_t *reader) /* IN */
       case BSON_TYPE_BOOL:
       case BSON_TYPE_NULL:
       case BSON_TYPE_TIMESTAMP:
+      case BSON_TYPE_REGEX:
       default:
          _bson_json_read_set_error (reader, "Unknown type %d", bson->bson_type);
          break;
@@ -1424,7 +1442,19 @@ _bson_json_read_end_map (bson_json_reader_t *reader) /* IN */
 
       _bson_json_read_append_timestamp (reader, bson);
       return;
+   } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_REGEX_VALUES) {
+      if (!bson->key) {
+         _bad_extended_json (reader);
+         return;
+      }
+
+      bson->read_state = BSON_JSON_IN_BSON_TYPE_REGEX_ENDMAP;
+
+      _bson_json_read_append_regex (reader, bson);
+      return;
    } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_TIMESTAMP_ENDMAP) {
+      bson->read_state = BSON_JSON_REGULAR;
+   } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_REGEX_ENDMAP) {
       bson->read_state = BSON_JSON_REGULAR;
    } else if (bson->read_state == BSON_JSON_IN_BSON_TYPE_DATE_NUMBERLONG) {
       if (!bson->key) {
